--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -6,55 +6,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:gravity="center"
     android:background="@color/bg"
     tools:context="com.example.avendano.cp_scan.Activities.RequestActivity">
 
+    <include
+        android:id="@id/toolbar"
+        layout = "@layout/toolbar"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:gravity="center">
+        <EditText
+            android:id="@+id/user_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="ID"
+            android:drawableLeft="@drawable/ic_id"
+            android:drawablePadding="10dp"/>
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:hint="Username"
+            android:drawableLeft="@drawable/username_orange"
+            android:drawablePadding="10dp"/>
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:hint="Password"
+            android:drawableLeft="@drawable/password_orange"
+            android:inputType="textPassword"
+            android:drawablePadding="10dp"
+            android:layout_marginBottom="10dp"/>
+        <Button
+            android:id="@+id/submit_action"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Submit"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:background="@drawable/style_button_white"
+            android:backgroundTint="@color/darkorange"/>
+        <Button
+            android:id="@+id/cancel_action"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Cancel"
+            android:textColor="@color/darkorange"
+            android:textStyle="bold"
+            android:background="@drawable/style_button_white"/>
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/user_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:hint="ID"
-        android:drawableLeft="@drawable/ic_id"
-        android:drawablePadding="10dp"/>
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:hint="Username"
-        android:drawableLeft="@drawable/username_orange"
-        android:drawablePadding="10dp"/>
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:hint="Password"
-        android:drawableLeft="@drawable/password_orange"
-        android:inputType="textPassword"
-        android:drawablePadding="10dp"
-        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:id="@+id/submit_action"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:text="Submit"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:background="@drawable/style_button_white"
-        android:backgroundTint="@color/darkorange"/>
-    <Button
-        android:id="@+id/cancel_action"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:text="Cancel"
-        android:textColor="@color/darkorange"
-        android:textStyle="bold"
-        android:background="@drawable/style_button_white"/>
 </LinearLayout>
