--- a/app/src/main/res/drawable/drawable.xml
+++ b/app/src/main/res/drawable/drawable.xml
@@ -8,7 +8,7 @@
             <solid android:color="@color/white"/>
             <corners android:bottomRightRadius="3dp"
                 android:topRightRadius="3dp"/>
-            <stroke android:width="1dp" android:color="@color/darkorange"/>
+            <stroke android:width="1dp" android:color="@color/button_color"/>
         </shape>
     </item>
     <item
