--- a/app/src/main/res/drawable/style_edittext.xml
+++ b/app/src/main/res/drawable/style_edittext.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="3dp"/>
     <solid android:color="@color/white"/>
-    <stroke android:color="@color/darkorange" android:width="1dp"/>
+    <stroke android:color="@color/darkGrey" android:width="1dp"/>
 </shape>
