--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -25,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@drawable/style_button_white"
+            android:background="@color/mountainmeadow"
             android:padding="4dp"
             android:text="Scan QR"
-            android:textColor="@color/darkorange" />
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
