--- a/app/src/main/res/layout/activity_pcassessment.xml
+++ b/app/src/main/res/layout/activity_pcassessment.xml
@@ -252,7 +252,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@color/darkorange"
+        android:background="@color/button_color"
         android:text="Save"
         android:textColor="@color/white"
         android:layout_marginBottom="5dp"/>
