--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/darkorange" />
+        android:background="@color/button_color" />
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
