--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -21,12 +21,12 @@
             android:layout_gravity="bottom"
             android:text="Cancel"
             tools:ignore="ButtonStyle"
-            android:background="@color/darkorange"
+            android:background="@color/button_color"
             android:textColor="@android:color/white" />
         <Button
             android:layout_marginRight="1dp"
             android:id="@+id/clear"
-            android:background="@color/darkorange"
+            android:background="@color/button_color"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,7 +34,7 @@
             tools:ignore="ButtonStyle"
             android:textColor="@android:color/white" />
         <Button
-            android:background="@color/darkorange"
+            android:background="@color/button_color"
             android:id="@+id/getsign"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
