--- a/app/src/main/res/layout/activity_view_inventory_report.xml
+++ b/app/src/main/res/layout/activity_view_inventory_report.xml
@@ -115,7 +115,7 @@
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="5dp"
-            android:background="@color/darkorange"
+            android:background="@color/button_color"
             android:text="Sign"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -125,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginTop="5dp"
-            android:background="@color/darkorange" />
+            android:background="@color/button_color" />
     </RelativeLayout>
 
 
