--- a/app/src/main/res/layout/activity_view_repair_report.xml
+++ b/app/src/main/res/layout/activity_view_repair_report.xml
@@ -47,7 +47,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/darkorange" />
+                android:background="@color/button_color" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -195,7 +195,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/darkorange" />
+                android:background="@color/button_color" />
             <TextView
                 android:id="@+id/tech"
                 android:layout_width="match_parent"
@@ -213,7 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@color/darkorange"
+                android:background="@color/button_color"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
@@ -291,7 +291,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/darkorange" />
+                        android:background="@color/button_color" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
