--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/darkorange" />
+        android:background="@color/button_color" />
 
     <ProgressBar
         android:id="@+id/progressBar"
