--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -52,7 +52,7 @@
                 android:layout_height="60dp"
                 android:layout_alignParentRight="true"
                 android:text="view"
-                android:tint="@color/darkorange" />
+                android:tint="@color/button_color" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
