--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -26,7 +26,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/darkorange" />
+            android:background="@color/button_color" />
 
         <TextView
             android:gravity="center_horizontal"
