--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--ffc107-->
-    <color name="colorPrimary">#29deb9</color>
+    <color name="colorPrimary">#000000</color>
     <!--ffa000-->
-    <color name="colorPrimaryDark">#FF1BBC9B</color>
+    <color name="colorPrimaryDark">#d6dfc2</color>
     <!--ff8000-->
-    <color name="darkorange">#59abe7</color>
+    <color name="button_color">#26c281 </color>
+    <color name="darkgreen">#021300</color>
     <color name="colorAccent">#FF4081</color>
     <color name="bg">#fcfcfc</color>
     <color name="iconColor">#c1bebe</color>
