--- a/app/src/main/res/layout/recycler_and_spinner.xml
+++ b/app/src/main/res/layout/recycler_and_spinner.xml
@@ -41,7 +41,7 @@
             android:padding="5dp">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_task_sched"
+                android:id="@+id/recycler_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -52,6 +52,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
+        android:visibility="gone"
         android:id="@+id/add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
