--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/head_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="Category"
                 android:textSize="20sp" />
 
             <TextView
@@ -42,7 +42,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/midtxt"
                 android:layout_toLeftOf="@+id/recycler_icon"
-                android:text="Name"
+                android:text="Date"
                 android:ellipsize="end"
                 android:maxLines="1" />
 
