--- a/app/src/main/res/drawable/style_button_white.xml
+++ b/app/src/main/res/drawable/style_button_white.xml
@@ -2,5 +2,6 @@
 <shape
     android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
-    <solid android:color="@color/button_color"/>
+    <stroke android:width="1dp" android:color="@color/button_color"/>
+    <solid android:color="@color/white"/>
 </shape>
