--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.avendano.cp_scan.Activities.EditProfileActivity">
+    tools:context="com.example.avendano.cp_scan.Pages.EditProfileActivity">
 
     <include
         android:id="@+id/toolbar"
