--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -37,37 +37,29 @@
             android:textSize="10sp"
             android:textStyle="italic"/>
         <LinearLayout
+            android:id="@+id/linear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true">
-            <TextView
-                android:padding="3dp"
-                android:id="@+id/edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/underlined_edit"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="|"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"/>
+            android:layout_alignParentRight="true">
 
             <TextView
                 android:padding="3dp"
-                android:id="@+id/delete"
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/underlined_delete"/>
+                android:text="Status: "/>
         </LinearLayout>
 
-
-
+        <Button
+            android:id="@+id/report"
+            android:background="@color/mountainmeadow"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:text="Report"
+            android:textColor="@color/white"
+            android:layout_below="@id/linear"
+            android:visibility="gone"/>
     </RelativeLayout>
-
-
-
 </android.support.v7.widget.CardView>
