--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.avendano.cp_scan.Pages.LogInActivity">
+    tools:context="com.example.avendano.cp_scan.Activities.LogInActivity">
 
 
     <ImageView
