--- a/app/src/main/res/layout/activity_room_pc.xml
+++ b/app/src/main/res/layout/activity_room_pc.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/bg"
     android:orientation="vertical"
-    tools:context="com.example.avendano.cp_scan.Pages.RoomPc">
+    tools:context="com.example.avendano.cp_scan.Activities.RoomPc">
 
     <include
         android:id="@+id/toolbar"
