--- a/app/src/main/res/layout/activity_view_pc.xml
+++ b/app/src/main/res/layout/activity_view_pc.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.avendano.cp_scan.Pages.ViewPc">
+    tools:context="com.example.avendano.cp_scan.Activities.ViewPc">
 
     <LinearLayout
         android:layout_width="match_parent"
