Request Peripherals Design

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:src="@drawable/ic_rigtharrow"
+        android:src="@drawable/ic_rightarrow"
         android:visibility="gone"
         android:id="@+id/arrow"/>
     <EditText
