--- a/app/src/main/res/layout/request_peripherals_items.xml
+++ b/app/src/main/res/layout/request_peripherals_items.xml
@@ -7,6 +7,21 @@
     android:padding="5dp"
     android:background="@color/white">
 
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:text="Unit: "/>
+    <EditText
+        android:layout_alignParentTop="true"
+        android:id="@+id/unit"
+        android:layout_toRightOf="@id/txt"
+        android:background="@drawable/style_edittext"
+        android:layout_width="60dp"
+        android:layout_height="20dp" />
+
     <ImageView
         android:id="@+id/remove"
         android:layout_width="20dp"
