--- a/app/src/main/res/layout/req_list_item.xml
+++ b/app/src/main/res/layout/req_list_item.xml
@@ -51,7 +51,7 @@
                 android:text="Accept"
                 android:layout_marginRight="5dp"/>
             <Button
-                android:id="@+id/ignore"
+                android:id="@+id/negative"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="Ignore"
