--- a/app/src/main/res/layout/req_list_item.xml
+++ b/app/src/main/res/layout/req_list_item.xml
@@ -26,15 +26,16 @@
             android:text="location"
             android:ellipsize="end"
             android:maxLines="1"/>
-        <TextView
+        <me.grantland.widget.AutofitTextView
             android:id="@+id/req_status"
             android:visibility="gone"
             android:elevation="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Status: "
+            android:text="Status:"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            android:maxLines="1" />
 
         <LinearLayout
             android:layout_alignParentRight="true"
