--- a/app/src/main/res/layout/activity_request_peripherals.xml
+++ b/app/src/main/res/layout/activity_request_peripherals.xml
@@ -5,41 +5,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.avendano.cp_scan.Activities.RequestPeripherals">
-<include
-    layout="@layout/toolbar"
-    android:id="@+id/toolbar"/>
-    <EditText
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <LinearLayout
+        android:id="@+id/linear"
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/purpose"
-        android:background="@color/white"
-        android:hint="Purpose..."
-        android:padding="5dp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        />
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/bg_spinner">
+
+            <Spinner
+                android:id="@+id/list_type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="5dp"></Spinner>
+        </RelativeLayout>
+
+        <EditText
+            android:visibility="gone"
+            android:id="@+id/purpose"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:ellipsize="end"
+            android:hint="Other Purpose..."
+            android:maxLines="1"
+            android:padding="5dp"/>
+    </LinearLayout>
+
     <View
-        android:layout_below="@id/purpose"
         android:id="@+id/view"
+        android:layout_below="@id/linear"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/darkGrey"
+        android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"/>
+        android:background="@color/darkGrey" />
+
     <ListView
-        android:layout_below="@id/view"
         android:id="@+id/peripherals"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"
+        android:layout_below="@id/view"></ListView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
-        android:src="@drawable/ic_add"/>
+        android:src="@drawable/ic_add" />
 </RelativeLayout>
