--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -18,20 +18,6 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="5dp">
-        <Button
-            android:id="@+id/scan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@color/button_color"
-            android:padding="4dp"
-            android:text="Scan QR"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OR" />
 
         <EditText
             android:id="@+id/serial_number"
@@ -41,7 +27,7 @@
             android:layout_weight="1"
             android:background="@drawable/style_edittext"
             android:drawableRight="@drawable/drawable"
-            android:hint="Serial Number"
+            android:hint="Serial Number.."
             android:inputType="text"
             android:paddingLeft="5dp" />
     </LinearLayout>
