--- a/app/src/main/res/layout/activity_view_pc.xml
+++ b/app/src/main/res/layout/activity_view_pc.xml
@@ -153,6 +153,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="Computer Serial:" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Model:" />
 
                     <TextView
@@ -219,6 +224,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/pc_serial"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="----" />
                     <TextView
                         android:id="@+id/pc_model"
                         android:layout_width="wrap_content"
