--- a/app/src/main/res/layout/main_page_technician.xml
+++ b/app/src/main/res/layout/main_page_technician.xml
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
-                android:id="@+id/quick_scan"
+                android:id="@+id/requests"
                 android:layout_width="140dp"
                 android:layout_height="180dp"
                 app:cardCornerRadius="9dp"
@@ -74,121 +74,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/start_inventory">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:padding="5dp">
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal">
-
-                        <ImageView
-                            android:layout_centerInParent="true"
-                            android:layout_width="64dp"
-                            android:layout_height="64dp"
-                            android:background="@drawable/meadowcircle" />
-
-                        <ImageView
-                            android:layout_width="15dp"
-                            android:layout_height="18dp"
-                            android:layout_centerInParent="true"
-                            android:src="@drawable/ic_qr"
-                            android:tint="@color/white" />
-                        <ImageView
-                            android:layout_centerInParent="true"
-                            android:layout_width="50dp"
-                            android:layout_height="34dp"
-                            android:src="@drawable/ic_scann"
-                            android:tint="@color/white" />
-                    </RelativeLayout>
-
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginTop="20dp"
-                        android:background="@color/lightGrey" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:padding="10dp"
-                        android:text="Quick Scan"
-                        android:textColor="@color/black" />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/start_inventory"
-                android:layout_width="140dp"
-                android:layout_height="180dp"
-                app:cardCornerRadius="9dp"
-                app:cardElevation="5dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/quick_scan">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:padding="5dp">
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal">
-
-                        <ImageView
-                            android:layout_width="64dp"
-                            android:layout_height="64dp"
-                            android:background="@drawable/bluecircle" />
-
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_centerInParent="true"
-                            android:src="@drawable/ic_assessment"
-                            android:tint="@color/white" />
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="-5dp"
-                        android:background="@color/lightGrey" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:text="Start\nInventory"
-                        android:textColor="@color/black" />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/requests"
-                android:layout_width="140dp"
-                android:layout_height="180dp"
-                android:elevation="5dp"
-                app:cardCornerRadius="9dp"
-                app:cardElevation="5dp"
-                app:layout_constraintEnd_toStartOf="@+id/req_sched"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/req_sched">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -196,8 +81,9 @@
 
                     <com.nex3z.notificationbadge.NotificationBadge
                         android:id="@+id/badge"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:badgeTextSize="13sp"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginRight="-5dp"
@@ -254,16 +140,70 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/req_sched"
+                android:id="@+id/start_inventory"
                 android:layout_width="140dp"
                 android:layout_height="180dp"
-                android:layout_marginTop="10dp"
                 app:cardCornerRadius="9dp"
                 app:cardElevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/requests"
-                app:layout_constraintTop_toBottomOf="@+id/quick_scan">
+                app:layout_constraintStart_toEndOf="@+id/requests">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:padding="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal">
+
+                        <ImageView
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/bluecircle" />
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_assessment"
+                            android:tint="@color/white" />
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="-5dp"
+                        android:background="@color/lightGrey" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:text="Start\nInventory"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/req_sched"
+                android:layout_width="140dp"
+                android:layout_height="180dp"
+                android:elevation="5dp"
+                app:cardCornerRadius="9dp"
+                app:cardElevation="5dp"
+                app:layout_constraintEnd_toStartOf="@+id/reports"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/reports">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -313,13 +253,13 @@
                 android:id="@+id/reports"
                 android:layout_width="140dp"
                 android:layout_height="180dp"
+                android:layout_marginTop="10dp"
                 app:cardCornerRadius="9dp"
                 app:cardElevation="5dp"
-                app:layout_constraintEnd_toStartOf="@+id/rooms"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/rooms">
+                app:layout_constraintStart_toEndOf="@+id/requests"
+                app:layout_constraintTop_toBottomOf="@+id/start_inventory">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -370,13 +310,13 @@
                 android:id="@+id/rooms"
                 android:layout_width="140dp"
                 android:layout_height="180dp"
-                android:layout_marginTop="10dp"
                 app:cardCornerRadius="9dp"
                 app:cardElevation="5dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/account"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/reports"
-                app:layout_constraintTop_toBottomOf="@+id/requests">
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/account">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -420,24 +360,21 @@
                         android:text="Rooms"
                         android:textColor="@color/black" />
                 </LinearLayout>
-
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/account"
-                android:layout_width="260dp"
-                android:layout_height="130dp"
+                android:layout_width="140dp"
+                android:layout_height="180dp"
                 android:layout_marginTop="10dp"
                 app:cardCornerRadius="9dp"
                 app:cardElevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/rooms"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rooms" >
+                app:layout_constraintStart_toEndOf="@+id/room"
+                app:layout_constraintTop_toBottomOf="@+id/reports">
 
                 <LinearLayout
-                    android:weightSum="2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -445,43 +382,40 @@
                     android:padding="5dp">
 
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal">
 
                         <ImageView
-                            android:layout_centerInParent="true"
-                            android:id="@+id/image"
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                           android:layout_centerHorizontal="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerInParent="true"
                             android:background="@drawable/lightbluecircle" />
 
 
                         <ImageView
-                            android:layout_centerHorizontal="true"
-                            android:id="@+id/icon"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_centerHorizontal="true"
                             android:layout_centerInParent="true"
                             android:src="@drawable/username"
                             android:tint="@color/white" />
-                        <View
-                            android:layout_below="@+id/image"
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginTop="20dp"
-                            android:background="@color/lightGrey" />
                     </RelativeLayout>
 
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@color/lightGrey" />
+
                     <TextView
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:padding="10dp"
                         android:text="Account"
                         android:textColor="@color/black" />
                 </LinearLayout>
