--- a/app/src/main/res/layout/report_details_with_children.xml
+++ b/app/src/main/res/layout/report_details_with_children.xml
@@ -72,6 +72,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Computer Serial:"
+                    android:maxLines="2"
+                    android:ellipsize="end"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Model:" />
 
                 <TextView
@@ -133,6 +139,11 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/pc_serial"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp" />
                 <TextView
                     android:id="@+id/pc_model"
                     android:layout_width="match_parent"
